--- a/src/Header.css
+++ b/src/Header.css
@@ -1,7 +1,7 @@
 header {
   margin: 0 auto;
   text-align: center;
-  padding: 100px 0 0 0;
+  padding: 90px 0 0 0;
   position: relative;
 }
 
@@ -20,6 +20,7 @@ header h1 {
   margin: 0;
   font-family: 'Courgette', cursive;
   color: rgb(255, 255, 255);
+  margin-bottom: 30px;
 }
 
 span.this {
@@ -34,19 +35,37 @@ span.this:hover {
 }
 
 .panel {
- border-radius: 8px;
-  padding:  10px 20px 20px 20px;
+  border-radius: 8px;
+  padding:  0 20px 20px 20px;
   background-color: rgba(0, 0, 0, 0.5);
   margin: 0 auto;
   width: 500px;
   -webkit-box-shadow: 0px 0px 110px -10px rgba(0,0,0,0.8);
   -moz-box-shadow: 0px 0px 110px -10px rgba(0,0,0,0.8);
   box-shadow: 0px 0px 110px -10px rgba(0,0,0,0.8);
-  
 }
 
 img {
   position: relative;
   bottom: 1.2em;
   width: 200px;
+}
+
+header a {
+  box-shadow: 0 3px 3px 0 rgba(0,0,0, .1);
+  font-weight: 700;
+  background-color: #1d809f;
+  border-color: #1d809f;
+  color: #fff;
+  padding: 1.25rem 2.5rem;
+  text-decoration: none;
+  border-radius: 10rem;
+  display: inline-block;
+  -moz-transition: 0.4s ease-in-out;
+  -o-transition: 0.4s ease-in-out;
+  -webkit-transition: 0.4s ease-in-out;
+}
+
+header a:hover {
+  background-color: red;
 }
