--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,289 @@
-.App {
+body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+  box-sizing: border-box;
+}
+
+/* Styling for NavBar */
+
+.logo {
+  color: #000;
+  margin: 8px;
+  font-family: 'Pacifico', cursive;
+  word-spacing: 4px;
+  letter-spacing: 4px;
+  font-size: 25px;
+  padding: 8px;
+  /*border-radius: 8px;
+  -webkit-box-shadow: 0px 0px 24px -1px rgba(0,0,0,0.5);
+  -moz-box-shadow: 0px 0px 24px -1px rgba(0,0,0,0.5);
+  box-shadow: 0px 0px 24px -1px rgba(0,0,0,0.5);*/
+}
+
+nav {
+  display: flex;
+  font-family: 'Roboto Condensed', sans-serif;
+  justify-content: space-between;
+  background-color: rgb(20, 166, 211);
+  align-items: center;
+  padding: 0 20px 0 0;
+}
+
+nav ul {
+  list-style-type: none;
+}
+
+nav ul li {
+  display: inline-block;
+  margin: 0 20px 0 0;
+  font-size: 22px;
+  line-height: 10px;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: #000;
+  line-height: 4px;
+  padding: 12px;
+  border-radius: 8px;
+  -moz-transition: 0.2s ease-in-out;
+  -o-transition: 0.2s ease-in-out;
+  -webkit-transition: 0.2s ease-in-out;
+}
+
+/* Nav transition animation*/
+nav ul li a:hover {
+  color: rgb(221, 221, 221);
+  font-size: 28px;
+  padding: 0;
+  -webkit-box-shadow: 0px 0px 110px -10px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 0px 110px -10px rgba(0,0,0,0.75);
+  box-shadow: 0px 0px 110px -10px rgba(0,0,0,0.75);
+}
+
+
+/* Header */
+header {
+  margin: 0 auto;
+  text-align: center;
+  padding: 90px 0 0 0;
+  position: relative;
+}
+
+header h1 {
+  margin: 0;
+  font-size: 4em;
+  color: rgb(255, 255, 255);
+  font-family: 'Courgette', cursive;
+  position: inherit;
+}
+
+.subTitle {
+  font-weight: 700;
+  font-size: 1.75rem;
+  padding: 0;
+  margin: 0;
+  font-family: 'Courgette', cursive;
+  color: rgb(255, 255, 255);
+  margin-bottom: 30px;
+}
+
+span.this {
+  color: rgb(139, 0, 139);
+  -moz-transition: 0.2s ease-in-out;
+  -o-transition: 0.2s ease-in-out;
+  -webkit-transition: 0.2s ease-in-out;
+}
+
+span.this:hover {
+  border-bottom: 4px solid rgb(121, 0, 0);
+}
+
+.panel {
+  border-radius: 8px;
+  padding:  0 20px 20px 20px;
+  background-color: rgba(0, 0, 0, 0.5);
+  margin: 0 auto;
+  width: 500px;
+  -webkit-box-shadow: 0px 0px 110px -10px rgba(0,0,0,0.8);
+  -moz-box-shadow: 0px 0px 110px -10px rgba(0,0,0,0.8);
+  box-shadow: 0px 0px 110px -10px rgba(0,0,0,0.8);
+}
+
+img {
+  position: relative;
+  bottom: 1.2em;
+  width: 200px;
+}
+
+header a {
+  box-shadow: 0 3px 3px 0 rgba(0,0,0, .1);
+  font-weight: 700;
+  background-color: #1d809f;
+  border-color: #1d809f;
+  color: #fff;
+  padding: 1.25rem 2.5rem;
+  text-decoration: none;
+  border-radius: 10rem;
+  display: inline-block;
+  -moz-transition: 0.4s ease-in-out;
+  -o-transition: 0.4s ease-in-out;
+  -webkit-transition: 0.4s ease-in-out;
+}
+
+header a:hover {
+  background-color: red;
+}
+
+/* About */
+
+.about {
+  margin: 0 auto;
+  text-align: center;
+  padding: 30px 30px 90px 30px;
+  /*background-color: rgb(41, 201, 250);*/
+  min-height: 650px;
+  max-width: 600px;
+}
+
+.aboutBox {
+  float: left;
+  padding: 24px;
+}
+
+.about h1 {
+  margin: 0 10px;
+  font-weight: 700;
+  font-family: 'Courgette', cursive;
+  font-size: 4em;
+}
+
+.about p{
+  max-width: 500px;
+  padding: 14px;
+  font-size: 20px;
+  font-family: 'Kosugi Maru', sans-serif;
+}
+
+.redLetter {
+  color: rgb(255, 0, 0);
+}
+
+/* Services */
+
+.services {
+  padding: 120px 40px 120px 24px;
+  background-color: rgb(20, 166, 211);
+  min-height: 400px; 
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.services h3 {
+  font-size: 15px;
+  text-transform: uppercase;
+  color: rgb(236, 184, 7);
+  margin: 0;
+  padding: 0;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
+.services h4 {
+  margin-bottom: 8px;
+  font-family: inherit;
+  font-weight: 500;
+  line-height: 1.2;
+  text-transform: uppercase;
+  color: rgb(236, 184, 7);
+  font-size: 24px;
+}
+
+.services h2 {
+  color: #fff;
+  font-size: 48px;
+  margin-bottom: 48px;
+  margin-top: 0;
+}
+
+.services > .row p ion-icon {
+  color: red;
+}
+
+.services p {
+  color: #fff;
+  font-size: 15px;
+}
+
+.services > .row {
+  display: flex;
+  justify-content: space-around;
+}
+
+.services > .row span {
+  background-color: #fff;
+  width: 112px;
+  height: 112px;
+  display: inline-block;
+  border-radius: 50%;
+  color: #9f1d99;
+  font-size: 60px;
+  line-height: 120px;
+}
+
+/* Progress bar */
+
+.ProgressContainer {
+  background: #efefef;
   padding: 20px;
-  color: white;
+  max-width: 350px;
+  min-width: 150px;
+  margin: 15vh auto;
+  border-radius: 10px;
+  border: solid 5px #dbdbdb;
 }
 
-.App-title {
-  font-size: 1.5em;
+/* Progress Bars */
+
+.progressBar {
+  margin-bottom: 26px;
+  margin-bottom: 1.66em;
 }
 
-.App-intro {
-  font-size: large;
+.progressBar h4 {
+  font-size: 21px;
+  font-size: 1.33em;
+  text-transform: none;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  margin-bottom: 7px;
+  margin-bottom: .33em;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.progressBarContainer {
+  width: 100%;
+  max-width: 350px;
+  height: 26px;
+  height: 1.66em;
+  background: #e6eae3;
+  background: rgba(8, 102, 220, .2);
+  overflow: hidden;
+  border-radius: 5px;
 }
+
+.progressBarValue {
+  height: 1.66em;
+  float: left;
+  background: #0866dc;
+  background: rgba(8, 102, 220, .75);
+}
+
+.value-00 { width: 0; }
+.value-10 { width: 10%; }
+.value-20 { width: 20%; }
+.value-30 { width: 30%; }
+.value-40 { width: 40%; }
+.value-50 { width: 50%; }
+.value-60 { width: 60%; }
+.value-70 { width: 70%; }
+.value-80 { width: 80%; }
+.value-90 { width: 90%; }
+.value-100 { width: 100%; }
