added card affect to about section, fixed padding and margin bugs

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 * {
   box-sizing: border-box;
+  margin:0;
+  padding:0;
 }
 
 body {
@@ -26,6 +28,12 @@ body {
 }
 
 nav {
+  position: fixed;
+  overflow: hidden;
+  top: 0;
+  z-index: 200;
+  width: 100%;
+  margin-bottom: 50px;
   display: flex;
   font-family: 'Roboto Condensed', sans-serif;
   justify-content: space-between;
@@ -70,9 +78,11 @@ nav ul li a:hover {
 /* Header */
 header {
   margin: 0 auto;
+  margin-top: 4.75em;
   text-align: center;
   padding: 90px 0 0 0;
   position: relative;
+  margin-bottom: 40px;
 }
 
 header h1 {
@@ -145,9 +155,8 @@ header a:hover {
 /* About */
 
 .about {
-
   margin: 0 auto;
-  padding: 30px 30px 90px 30px;
+  padding: 90px 30px;
   /*background-color: rgb(41, 201, 250);*/
   min-height: 650px;
   max-width: 1100px;
@@ -156,6 +165,26 @@ header a:hover {
 .aboutBox {
   padding: 24px;
   display: flex;
+  border-radius: 10px;
+  -webkit-transition: 0.5s ease-in-out;
+}
+
+.aboutBox:hover {
+  padding: 30px;
+  -webkit-box-shadow: 17px 8px 65px -5px rgba(0,0,0,0.75);
+  -moz-box-shadow: 17px 8px 65px -5px rgba(0,0,0,0.75);
+  box-shadow: 17px 8px 65px -5px rgba(0,0,0,0.75);
+}
+
+.aboutBox:first-child {
+  margin-bottom: 5em;
+}
+.aboutBox:first-child:hover {
+  margin-bottom: 4.25em;
+}
+
+.aboutBox:last-child:hover {
+  padding-bottom: 18px;
 }
 
 .about h1 {
@@ -188,6 +217,8 @@ header a:hover {
   padding: 14px;
   font-size: 20px;
   font-family: 'Kosugi Maru', sans-serif;
+  padding-top: 4em;
+  padding-bottom: 0;
 }
 
 .redLetter {
